openwebui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openweb-ui
  labels:
    app: openweb-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openweb-ui
  template:
    metadata:
      labels:
        app: openweb-ui
    spec:
      containers:
      - name: openweb-ui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: openweb-data
          mountPath: /app/backend/data
      volumes:
      - name: openweb-data
        persistentVolumeClaim:
          claimName:  openweb-ui-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: openweb-ui-service
spec:
  selector:
    app: openweb-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
