ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepseek.gheware.com
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod-gheware
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"    
spec:
  ingressClassName: nginx
  rules:
  - host: deepseek.gheware.com
    http:
      paths:
      - backend:
          service:
            name: openweb-ui-service
            port:
              number: 8080
        path: /?(.*)
        pathType: ImplementationSpecific
  - host: gheware.com
    http:
      paths:
      - backend:
          service:
            name: openweb-ui-service
            port:
              number: 8080
        path: /?(.*)
        pathType: ImplementationSpecific

  tls:
  - hosts:
    - deepseek.gheware.com
    - gheware.com
    secretName: deepseek.gheware.com
status:
  loadBalancer: {}
